--- a/hello-world/hello-css/index.html
+++ b/hello-world/hello-css/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hello HTML</title>
-    <meta name="description" content="Hello HTML">
+    <title>Hello CSS</title>
+    <meta name="description" content="Hello CSS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
   </head>
   <body>
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <p>Hello world!</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Hello world!</h1>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
