--- a/forms/basic/index.html
+++ b/forms/basic/index.html
@@ -36,7 +36,13 @@
           </form>
         </div>
       </div>
+      <div class="row" id="data">
+        <div class="col-md-12">
+          <pre>Name:</pre>
+        </div>
+      </div>
     </div>
+    
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
     <script src="js/app.js"></script>
   </body>
