--- a/forms/sanitize/index.html
+++ b/forms/sanitize/index.html
@@ -19,7 +19,7 @@
             <div class="form-group">
               <label for="inputName" class="col-sm-2 control-label">Name</label>
               <div class="col-sm-10">
-                <input ng-model="user.name" type="text" class="form-control" id="inputName" placeholder="Name">
+                <input ng-model="user.name" type="text" class="form-control" id="inputName" placeholder="Name" required>
               </div>
             </div>
             <div class="form-group">
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button ng-disabled="!myForm.$valid" type="submit" class="btn btn-default">Submit</button>
               </div>
             </div>
           </form>
