--- a/forms/sanitize/index.html
+++ b/forms/sanitize/index.html
@@ -19,7 +19,7 @@
             <div class="form-group">
               <label for="inputName" class="col-sm-2 control-label">Name</label>
               <div class="col-sm-10">
-                <input ng-model="user.name" type="text" class="form-control" id="inputName" placeholder="Name" required>
+                <input ng-model="user.name" ng-class="{error: myForm.$invalid}" type="text" class="form-control" id="inputName" placeholder="Name" required>
               </div>
             </div>
             <div class="form-group">
