--- a/forms/sanitize/index.html
+++ b/forms/sanitize/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Hello JS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
   </head>
@@ -17,7 +18,10 @@
           <h1>{{hello_msg}}</h1>
           <form class="form-horizontal" name="myForm" id="myForm" ng-submit="submit_data()">
             <div class="form-group">
-              <label for="inputName" class="col-sm-2 control-label">Name</label>
+              <label for="inputName" class="col-sm-2 control-label required-input">
+                Name
+                <i class="fa fa-fw fa-asterisk"></i>
+              </label>
               <div class="col-sm-10">
                 <input ng-model="user.name" ng-class="{error: myForm.$invalid}" type="text" class="form-control" id="inputName" placeholder="Name" required>
               </div>
