--- a/forms/sanitize/index.html
+++ b/forms/sanitize/index.html
@@ -20,7 +20,7 @@
             <div class="form-group">
               <label for="inputName" class="col-sm-2 control-label required-input">
                 Name
-                <i class="fa fa-fw fa-asterisk"></i>
+                <i class="fa fa-asterisk"></i>
               </label>
               <div class="col-sm-10">
                 <input ng-model="user.name" ng-class="{error: myForm.$invalid}" type="text" class="form-control" id="inputName" placeholder="Name" required>
@@ -34,7 +34,10 @@
             </div>
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button ng-disabled="!myForm.$valid" type="submit" class="btn btn-default">Submit</button>
+                <button ng-disabled="!myForm.$valid" type="submit" class="btn btn-default">
+                  Submit
+                  <i class="fa fa-check-circle"></i>
+                </button>
               </div>
             </div>
           </form>
