--- a/forms/sanitize/index.html
+++ b/forms/sanitize/index.html
@@ -17,6 +17,8 @@
         <div class="col-md-12">
           <h1>{{hello_msg}}</h1>
           <form class="form-horizontal" name="myForm" id="myForm" ng-submit="submit_data()">
+
+            <!--Name-->
             <div class="form-group">
               <label for="inputName" class="col-sm-2 control-label required-input">
                 Name
@@ -26,12 +28,18 @@
                 <input ng-model="user.name" ng-class="{error: myForm.$invalid}" type="text" class="form-control" id="inputName" placeholder="Name" required>
               </div>
             </div>
+            <!--/Name-->
+
+            <!--Favorite Movie-->
             <div class="form-group">
               <label for="inputFavoriteMovie" class="col-sm-2 control-label">Favorite Movie</label>
               <div class="col-sm-10">
                 <input ng-model="user.movie" type="text" class="form-control" id="inputFavoriteMovie" placeholder="Favorite Movie">
               </div>
             </div>
+            <!--Favorite Movie-->
+
+            <!--Submit-->
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
                 <button ng-disabled="!myForm.$valid" type="submit" class="btn btn-default">
@@ -40,6 +48,8 @@
                 </button>
               </div>
             </div>
+            <!--/Submit-->
+
           </form>
         </div>
       </div>
