--- a/hello-world/hello-css/index.html
+++ b/hello-world/hello-css/index.html
@@ -6,17 +6,12 @@
     <title>Hello CSS</title>
     <meta name="description" content="Hello CSS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
   </head>
   <body>
-    <div class="container" id="home">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Hello world!</h1>
-        </div>
-      </div>
+    <div id="home">
+      <h1>Hello world!</h1>
     </div>
   </body>
 </html>
