add sweet alert css

--- a/forms/alert/index.html
+++ b/forms/alert/index.html
@@ -6,8 +6,17 @@
     <title>Forms with Alerts</title>
     <meta name="description" content="Hello JS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Bootstrap-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+
+    <!--Font Awesome-->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <!--Sweet Alert-->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.css">
+
+    <!--Custom CSS-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
   </head>
