--- a/forms/alert/index.html
+++ b/forms/alert/index.html
@@ -69,7 +69,14 @@
       </div>
     </div>
 
+    <!--Angular-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
+
+    <!--Sweet Alert-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/sweetalert/0.4.1/sweet-alert.min.js"></script>
+    <script src="js/lib/sweet-alert.min.js"></script>
+
+    <!--Custom-->
     <script src="js/app.js"></script>
   </body>
 </html>
