--- a/forms/alert/index.html
+++ b/forms/alert/index.html
@@ -48,21 +48,20 @@
               <div class="col-sm-10">
                 <div class="radio">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
-                    Option one is this and that&mdash;be sure to include why it's great
+                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="Mega">
+                    Mega
                   </label>
                 </div>
                 <div class="radio">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
-                    Option two can be something else and selecting it will
-                    deselect option one
+                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="Moderately">
+                    Moderately
                   </label>
                 </div>
                 <div class="radio disabled">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3" >
-                    Option three is disabled
+                    <input type="radio" name="optionsRadios" id="optionsRadios3" value="Meh">
+                    Meh
                   </label>
                 </div>
               </div>
