--- a/forms/alert/index.html
+++ b/forms/alert/index.html
@@ -39,7 +39,7 @@
             </div>
             <!--/Name-->
 
-            <!--Favorite Movie-->
+            <!--Stoked Level-->
             <div class="form-group">
               <label for="inputStoked" class="col-sm-2 control-label required-input">
                 Stoke Level
@@ -48,7 +48,7 @@
               <div class="col-sm-10">
                 <div class="radio">
                   <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="Mega">
+                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="Mega" required>
                     Mega
                   </label>
                 </div>
@@ -64,13 +64,6 @@
                     Meh
                   </label>
                 </div>
-              </div>
-            </div>
-            <!--Favorite Movie-->
-
-            <!--Stoked Level-->
-            <div class="form-group">
-              <div class="col-sm-10 col-sm-offset-2">
               </div>
             </div>
             <!--/Stoked Level-->
