update stylings for ajax basic

--- a/ajax/basic/index.html
+++ b/ajax/basic/index.html
@@ -14,7 +14,7 @@
     <div class="container" id="home" ng-controller="MainCtrl">
       <div class="row">
         <div class="col-md-12">
-          <h1>{{hello_msg}}</h1>
+          <h1 class="page-header">{{hello_msg}}</h1>
         </div>
       </div>
       <div class="row">
