--- a/ajax/github/index.html
+++ b/ajax/github/index.html
@@ -29,13 +29,14 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row" ng-show="debug === true">
         <div class="col-md-12">
           <pre>{{ user | json }}</pre>
         </div>
       </div>
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-route.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
   </body>
