--- a/data-viz/basic/index.html
+++ b/data-viz/basic/index.html
@@ -1,30 +1,23 @@
-<!doctype html>
-<html ng-app="myApp">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>D3</title>
-    <meta name="description" content="Hello JS">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-  </head>
-  <body>
-    <div class="container" id="home" ng-controller="MainCtrl">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="page-header">D3 In Action!</h1>
-          <div>
-            <bars data="{{ data }}"></bars>
-          </div>
-        </div>
-      </div>
-    </div>
+<!DOCTYPE html>
+<html ng-app="plunker">
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
-    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="js/app.js"></script>
-    <script src="js/directives.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Angular-charts</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <script data-require="angular.js@1.2.2" src="http://code.angularjs.org/1.2.2/angular.js" data-semver="1.2.2"></script>
+  <script data-require="d3@*" data-semver="3.3.11" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.11/d3.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/chinmaymk/angular-charts/bower/dist/angular-charts.min.js"></script>
+  <script src="js/app.js"></script>
+</head>
+
+<body ng-controller="MainCtrl">
+  <div 
+    data-ac-chart="'bar'" 
+    data-ac-data="data" 
+    data-ac-config="config" 
+    class="chart">
+  </div>
+</body>
+
 </html>
