--- a/data-viz/basic/index.html
+++ b/data-viz/basic/index.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
-<html ng-app="plunker">
+<html ng-app="hello">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Basic Data Viz with D3</title>
+    <meta name="description" content="Hello D3">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
+  </head>
+  <body ng-cloak>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Angular-charts</title>
-  <link rel="stylesheet" href="css/style.css" />
-</head>
+    <div class="container" id="home" ng-controller="MainCtrl">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="page-header">Basic Data Viz</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div 
+            data-ac-chart="'bar'" 
+            data-ac-data="data" 
+            data-ac-config="config" 
+            class="chart">
+          </div>
+        </div>
+      </div>
+    </div>
 
-<body ng-controller="MainCtrl" ng-cloak>
-  <div 
-    data-ac-chart="'bar'" 
-    data-ac-data="data" 
-    data-ac-config="config" 
-    class="chart">
-  </div>
-
-  <script src="//code.angularjs.org/1.2.2/angular.js" data-semver="1.2.2"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.11/d3.js"></script>
-  <script src="//rawgit.com/chinmaymk/angular-charts/bower/dist/angular-charts.min.js"></script>
-  <script src="js/app.js"></script>
-</body>
-
+    <script src="//code.angularjs.org/1.3.2/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.11/d3.js"></script>
+    <script src="js/angular-charts.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
