--- a/data-viz/basic/index.html
+++ b/data-viz/basic/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <script src="//code.angularjs.org/1.3.2/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.3.11/d3.js"></script>
     <script src="js/angular-charts.js"></script>
     <script src="js/app.js"></script>
