--- a/spa/basic/index.html
+++ b/spa/basic/index.html
@@ -18,13 +18,17 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
-          <ul>
-            <li ng-repeat="thing in awesome_things">
-              {{ thing.name }}
-            </li>
-          </ul>
+        <div class="col-md-4" ng-repeat="thing in awesome_things">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <img ng-src="{{ thing.imgurl }}" class="avatar img-responsive">
+            </div>
+            <div class="panel-footer">
+              <a ng-href="#/{{ thing.name }}">{{ thing.name }}</a>
+            </div>
+          </div>
         </div>
+      </div>
       </div>
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
