add img example

--- a/hello-world/hello-anim/index.html
+++ b/hello-world/hello-anim/index.html
@@ -15,8 +15,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="text-center">
-            <div id="green"></div>
-            <div id="red"></div>
+              <img id="main" src="img/circles.png">
           </div>
         </div>
       </div>
