--- a/hello-world/hello-angular/index.html
+++ b/hello-world/hello-angular/index.html
@@ -14,9 +14,10 @@
     <div class="container" id="home" ng-controller="MainCtrl">
       <div class="row">
         <div class="col-md-12">
-          <h1>{{hello_msg}}</h1>
+          <h1 class="page-header">{{hello_msg}}</h1>
         </div>
       </div>
+      <awesome></awesome>
       <div class="row">
         <div class="col-md-12">
           <ul>
