--- a/hello-world/hello-angular/index.html
+++ b/hello-world/hello-angular/index.html
@@ -17,16 +17,7 @@
           <h1 class="page-header">{{hello_msg}}</h1>
         </div>
       </div>
-      <awesome></awesome>
-      <div class="row">
-        <div class="col-md-12">
-          <ul>
-            <li ng-repeat="thing in awesome_things">
-              {{ thing.name }}
-            </li>
-          </ul>
-        </div>
-      </div>
+      <my-awesome></my-awesome>
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
     <script src="js/app.js"></script>
