--- a/hello-world/hello-angular/index.html
+++ b/hello-world/hello-angular/index.html
@@ -17,7 +17,7 @@
           <h1 class="page-header">{{hello_msg}}</h1>
         </div>
       </div>
-      <my-awesome></my-awesome>
+      <awesome></awesome>
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
     <script src="js/app.js"></script>
