--- a/hello-world/hello-html/index.html
+++ b/hello-world/hello-html/index.html
@@ -8,6 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <p>Hello world!</p>
+    <p>Hello World!</p>
   </body>
 </html>
