--- a/hello-world/hello-closures/index.html
+++ b/hello-world/hello-closures/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hello JS</title>
+    <title>Hello JS Closures</title>
     <meta name="description" content="Hello JS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
@@ -14,7 +14,7 @@
     <div class="container" id="home">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="page-header" id="hello_msg"></h1>
+          <h1 class="page-header">Hello Closures</h1>
         </div>
       </div>
     </div>
