--- a/spa/basic/index.html
+++ b/spa/basic/index.html
@@ -7,32 +7,14 @@
     <meta name="description" content="Hello JS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body ng-cloak>
-    <div class="container" id="home" ng-controller="MainCtrl">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="page-header">{{ hello_msg }}</h1>
-        </div>
-      </div>
-      <div class="row">
-        <a ng-href="#/{{ thing.name }}" ng-repeat="thing in awesome_things" class="thing-wrapper">
-          <div class="col-md-4" >
-            <div class="panel panel-default">
-              <div class="panel-body">
-                <img ng-src="{{ thing.imgurl }}" class="avatar img-responsive">
-              </div>
-              <div class="panel-footer">
-                {{ thing.name }}
-              </div>
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
+    <div ng-view></div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-route.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
