--- a/spa/basic/index.html
+++ b/spa/basic/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body ng-cloak>
+    <navigation></navigation>
     <div ng-view></div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.10/angular-route.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
   </body>
 </html>
