--- a/hello-world/hello-react/index.html
+++ b/hello-world/hello-react/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.2/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="example">
-    </div>
+    <div id="hello"></div>
     <script src="lib/js/app.min.js"></script>
   </body>
 </html>
