--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hello World React</title>
+    <title>Web Dev Templates</title>
     <meta name="description" content="Hello JS">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="main"></div>
-    <script src="lib/js/app.min.js"></script>
+    <div class="container">
+      <h1 class="page-header">
+        Web Dev Templates
+      </h1>
+    </div>
   </body>
 </html>
